--- a/.gitignore
+++ b/.gitignore
@@ -364,4 +364,11 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
 CPproject
