dossier src+corrections include manquants+CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,4 @@
 ﻿# CMakeList.txt : projet CMake pour CMakeProject2, incluez la source et définissez
-# la logique spécifique au projet ici.
-#
 cmake_minimum_required (VERSION 3.8)
 
 project ("CPproject")
@@ -9,8 +7,8 @@ find_package(Curses REQUIRED)
 
 include_directories(${CURSES_INCLUDE_DIR})
 
-# Ajoutez une source à l'exécutable de ce projet.
-add_executable (CPproject "main.c" "main.h")
-target_link_libraries(CPproject ${CURSES_LIBRARIES})
+file (GLOB_RECURSE SOURCES "src/*.c" "src/*.h")
 
-# TODO: Ajoutez des tests et installez des cibles si nécessaire.
+add_executable (CPproject ${SOURCES})
+target_link_libraries(CPproject ${CURSES_LIBRARIES})
+target_link_libraries(CPproject m)
