--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿# CMakeList.txt : projet CMake pour CMakeProject2, incluez la source et définissez
+# CMakeList.txt : projet CMake pour CMakeProject2, incluez la source et définissez
 cmake_minimum_required (VERSION 3.8)
 
 project (CPproject)
